opam-version: "2.0"
name: "imandra_client_http_server"
version: "0.1"
maintainer: "Imandra Tech <tech@imandra.ai>"
author: "Dave Aitken <dave@imandra.ai>"
synopsis: "Http server for imandra"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "base64"
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "containers"
  "dune" {build}
  "imandra-client"
  "decoders-yojson"
]
homepage: "https://github.com/AestheticIntegration/imandra_network"
bug-reports: "https://github.com/AestheticIntegration/imandra_network/issues"
